Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -4,7 +4,10 @@
   </head>
  
   <body>
-    Hello World
+    <div>
+        <img src="../images/test.jpg" alt="profile image" />
+        <h2>Makise Kurisu</h2>
+     </div>
   </body>
  
 </html>
