--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -4,9 +4,9 @@
   </head>
  
   <body>
-    <div>
-        <img src="../images/test.jpg" alt="profile image" />
-        <h2>Makise Kurisu</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="../images/test.jpg" alt="profile image" />
+        <h2 id="profile-name">Makise Kurisu</h2>
      </div>
   </body>
  
