added new div as header container with id = header

--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -5,6 +5,7 @@
   </head>
  
   <body>
+    <div id="header">Header</div>
     <div id="profile-container">
         <img id="profile-image" src="../images/test.jpg" alt="profile image" />
         <h2 id="profile-name">Makise Kurisu</h2>
