added style for id footer

--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -9,6 +9,7 @@
         <img id="profile-image" src="../images/test.jpg" alt="profile image" />
         <h2 id="profile-name">Makise Kurisu</h2>
      </div>
+     <div id="footer">Footer</div>
   </body>
  
 </html>
